# rps_websocket

./: .env.example  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  docker-compose.yml  entrypoint.sh  pyproject.toml  requirements.txt
migrations/: env.py
src/: config.py  main.py
src/app/application/encoders/: jwt.py
src/app/application/exceptions/: base.py  game.py
src/app/application/managers/: game.py  users.py
src/app/application/models/: jwt.py  users.py
src/app/application/static/: style.css
src/app/application/templates/: game.html
src/app/domain/exceptions/: base.py  game.py
src/app/domain/models/: game.py  player.py
src/app/domain/services/: game.py  jwt.py  users.py
src/app/infrastructure/db/: database.py
src/app/main/: main.py
src/app/main/dependencies/: auth.py  game.py  jwt.py  users.py
src/auth/: auth.py  jwt.py
src/db/: base.py  database.py
src/db/migrations/: env.py
src/dependencies/: auth.py  jwt.py  users.py
src/dependencies/di/: init_dependencies.py
src/encoders/: jwt.py
src/exceptions/: auth.py  base.py  game.py
src/interfaces/encoders/: jwt.py
src/interfaces/repositories/: jwt.py  users.py
src/interfaces/services/: users.py
src/managers/: chat.py  game.py  users.py
src/models/: game.py  jwt.py  users.py
src/repositories/: base.py  jwt.py  users.py
src/routers/: chat.py  game.py  jwt.py  users.py
src/schemas/: users.py
src/services/: game.py  jwt.py  users.py
src/static/: chat.js  game.js  style.css
src/templates/: chat.html  game.html
(+16 files in other folders)
