[tool.poetry]
name = "websocket_game"
version = "0.1.0"
description = ""
authors = []

[tool.poetry.dependencies]
python = "3.11.4"
asyncpg= "^0.27.0"
gunicorn = "^20.1.0"
fastapi = "^0.101.0"
SQLAlchemy = "^2.0.16"
alembic = "^1.11.1"
uvicorn = "^0.22.0"
pydantic = "^2.1.1"
httpx = "^0.24.1"
pre-commit = "^3.3.3"
loguru = "^0.7.0"
python-dotenv = "^1.0.0"
websockets = "^11.0.3"
jinja2 = "^3.1.2"
pyjwt = "^2.8.0"
email-validator = "^2.0.0.post2"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
flake8-bugbear = "^23.3.12"
flake8-builtins = "^2.1.0"
flake8-cognitive-complexity = "^0.1.0"
flake8-commas = "^2.1.0"
flake8-quotes = "^3.3.2"
flake8-todo = "^0.7"
flake8-variables-names = "^0.0.5"
autoflake = "^1.3.1"
isort = "^5.12.0"
